next-ui: use swagger for API
